// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link snapshot should match snapshot 1`] = `
<Link>
  <FocusRing>
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <div
        className="md-link-container"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <a
          className="md-link-wrapper"
          data-disabled={false}
          data-inverted={false}
          onClick={[Function]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "display": "flex",
            }
          }
        >
          LinkNext
        </a>
      </div>
    </FocusRing>
  </FocusRing>
</Link>
`;

exports[`Link snapshot should match snapshot when disabled 1`] = `
<Link
  disabled={true}
>
  <FocusRing
    disabled={true}
  >
    <FocusRing
      disabled={true}
      focusClass="md-focus-ring-wrapper-disabled"
      focusRingClass="md-focus-ring-wrapper-disabled"
    >
      <div
        className="md-link-container"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <a
          aria-disabled={true}
          className="md-link-wrapper"
          data-disabled={true}
          data-inverted={false}
          onClick={[Function]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "display": "flex",
            }
          }
        >
          LinkNext
        </a>
      </div>
    </FocusRing>
  </FocusRing>
</Link>
`;

exports[`Link snapshot should match snapshot when inverted 1`] = `
<Link
  inverted={true}
>
  <FocusRing>
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <div
        className="md-link-container"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <a
          className="md-link-wrapper"
          data-disabled={false}
          data-inverted={true}
          onClick={[Function]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "display": "flex",
            }
          }
        >
          Hyperlink
        </a>
      </div>
    </FocusRing>
  </FocusRing>
</Link>
`;

exports[`Link snapshot should match snapshot with icon 1`] = `
<Link
  isWithIcon={true}
>
  <FocusRing>
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <div
        className="md-link-container"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <a
          className="md-link-wrapper"
          data-disabled={false}
          data-inverted={false}
          onClick={[Function]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "display": "flex",
            }
          }
        />
        <Icon
          className="md-link-icon"
          name="pop-out"
          scale={16}
        />
      </div>
    </FocusRing>
  </FocusRing>
</Link>
`;

exports[`Link snapshot should match snapshot with title 1`] = `
<Link
  title="Example Text"
>
  <FocusRing>
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <div
        className="md-link-container"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <a
          className="md-link-wrapper"
          data-disabled={false}
          data-inverted={false}
          onClick={[Function]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "display": "flex",
            }
          }
          title="Example Text"
        />
      </div>
    </FocusRing>
  </FocusRing>
</Link>
`;
